package com.maybank.transaction.utils;

public interface TransactionFields {
    String ACCOUNT_NUMBER = "accountNumber";
    String TRX_AMOUNT = "trxAmount";
    String DESCRIPTION = "description";
    String TRX_DATE = "trxDate";
    String TRX_TIME = "trxTime";
    String CUSTOMER_ID = "customerId";
}
